# king

./: .gitignore  Cargo.toml  Makefile  README.md  run.txt  run1.txt
.github/workflows/: heroku.yml
backend/: Cargo.toml
backend/res/: abi.json  players.json
backend/src/: agent.rs  constants.rs  contract.rs  game.rs  handlers.rs  main.rs  summary.rs  types.rs  utils.rs
backend/static/: king.sol
contract/: bytecode.txt
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  types.tsx
frontend/app/components/: player.tsx  summary.tsx
res/: players.json
src/: agent.rs  constants.rs  contract.rs  game.rs  handlers.rs  main.rs  summary.rs  types.rs  utils.rs
