[package]
name = "king"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
rayon = "1.10"
revm = { version = "12.1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethabi = "18.0.0"
rand = "0.8.5"
actix-files = "0.6"
log = "0.4"
env_logger = "0.10"
actix-cors = "0.7.0"
